Fixed width of Action type select component width to fix truncation

--- a/app/assets/stylesheets/patternfly_overrides.scss
+++ b/app/assets/stylesheets/patternfly_overrides.scss
@@ -715,6 +715,14 @@ table.c3-tooltip td {
   background-color: #393f44;
 }
 
+#action_info_div {
+  .bootstrap-select {
+    .dropdown-toggle {
+      width: max-content;
+    }
+  }
+}
+
 /* popovers should go over menu, but under .miq-main-menu-overlay */
 #popover {
   z-index: 9999;
